feat: add documentation for checkpoints
